--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,122 +10,60 @@ html, body {
 /*	#############################################################
     ###################### LOGIN ################################ */
 	
-  .login-trigger {
-    font-weight: bold;
-    color: #fff;
-    background: linear-gradient(to bottom right, #B05574, #F87E7B);
-    padding: 15px 30px;
-    border-radius: 30px;
-    position: relative; 
-    top: 50%;
-  }
-  
- 
-   .overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 500ms;
-    visibility: hidden;
-     opacity: 0;
-    }
-    .overlay:target {
-        visibility: visible;
-        opacity: 1;
-      }
-      
- .login{
-    text-align: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-    margin: auto;
-    width: 15%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 25px;
-    background-color: rgba(0,0,0,.5);
-    color: #fff;
-    font-family: 'Titillium Web', sans-serif;
-    
-}
-.x a{
-          position: fixed;
-          left: 85%;
-          top: 3%;
-          font-size: 30px;
-          color: red;
-          font-family: 'Titillium Web', sans-serif;
-          text-decoration: none;
-      }
-
-.login .head-login{	 
-    height: 30%; 
+  .container{
+height: 100%;
+align-content: center;
 }
 
-.login .head-login img{
-    max-height: 100%;
-    max-width: 100%;
+.card{
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
 }
 
-.login .credentials{
-  flex: 50%;
+.social_icon span{
+font-size: 60px;
+margin-left: 10px;
+color: #FFC312;
 }
 
-
-
-.credentials .nome{
-	border: 2px solid black;
-}
- .credentials .password{
-    margin-top: 70px;
-}
-.credentials .p{
-    margin-top: 70px;
+.social_icon span:hover{
+color: white;
+cursor: pointer;
 }
 
-.credentials h6{
-	font-size: 20px;
-}
-.credentials  input,.credentials  textarea{
-    text-transform: capitalize;
-    width: 90%;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    border-bottom: 2px solid #3d3c3c;
-    background-color: rgba(0,0,0,.5);
-    background: transparent;
-    font-size: 20px;
-    color: white;
-}
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-	-webkit-text-fill-color: rgb(255, 255, 255);
-  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
-  transition: background-color 5000s ease-out 0s;
+.card-header h3{
+color: white;
 }
 
-.credentials input::placeholder{
-    color: white;
-    opacity: 0.7;
+.social_icon{
+position: absolute;
+right: 20px;
+top: -45px;
 }
 
-.end-part{
-   flex: 10%; 
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+.login_btn{
+color: black;
+background-color: #FFC312;
+width: 100px;
+}
+
+.login_btn:hover{
+color: black;
+background-color: white;
 }
  .btn_login{
 	margin-top: 35px;
