--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
  <P class="slogan"> Qui il vero suppli al telefono</P>
     </div>
 </div>
+
 <div class= "second">
     <div class="container">
         <div class="row">
@@ -64,5 +65,6 @@
     </div>
 </div>
 <footer th:replace="fragments/base.html :: footer"></footer>
+<div th:replace="loginForm :: login"></div>
 </body>
 </html>
