--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,41 +28,20 @@
  <P class="slogan"> Qui il vero suppli al telefono</P>
     </div>
 </div>
+<div class="second">
+<div class="row"> 
+  <div class="column">
+  
+    <img src="images/dove siamojpg.jpg" style="width:100%">
+    <img src="images/chi siamo.jpg" style="width:100%">
 
-<div class= "second">
-    <div class="container">
-        <div class="row">
-                <div class="image">
-            <img src="images/suppli.jpg" style="width: 100%" alt="">
-            <div class="test">
-                <p>SUPPLI</p>
-        </div>
+  </div>
+  <div class="column">
+    <img src="images/suppli.jpg" style="width:100%">
+    <img src="images/tonde.jpg" style="width:100%">
+
+  </div>  
 </div>
-            <div class="image">
-                <img src="images/tonde.jpg" style="width: 100%" alt="">
-                <div class="test">
-                    <p>Pizza</p>
-            </div>
-            </div>
-        
-    
-        
-    </div>
-    <div class="row">
-        <div class="image">
-        <img src="images/chi siamo.jpg" style="width: 85%" alt="">
-        <div class="test">
-            <p>Chi Siamo</p>
-    </div>
-    </div>
-        <div class=image>
-        <img src="images/dove siamojpg.jpg" style="width: 94%" alt="">
-        <div class="test">
-            <p>Dove Siamo</p>
-    </div>
-    </div>
-    </div>
-    </div>
 </div>
 <footer th:replace="fragments/base.html :: footer"></footer>
 <div th:replace="loginForm :: login"></div>
