--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -921,3 +921,7 @@ header {
     color: black;
     /* border: 3px solid brown; */
 }  
+body.modal-open {
+    overflow: auto!important;
+    padding: 0px!important;
+}
