--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -13,25 +13,24 @@
 </style>
 </head>
 <body>
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" th:fragment="login">
-        <div class="container">
-            <div class="d-flex justify-content-center h-100">
-                <div class="card">
-                    <div style="display: flex; justify-content: space-between;" class="card-header">
-                        <h3>Login</h3>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                    </div>
-                    <p th:if="${loginError}" class="error">Wrong user or password</p>
-                    <div class="card-body">
-                        <form tth:action="@{/login}"  method="POST">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" th:fragment="login">
+  <div class="modal-dialog" role="document">
+  <form th:action="@{/login}"  method="POST">
+    <div class="modal-content">
+      <div class="modal-header">
+       
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         <div class="card-body">
+                        
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user"></i></span>
                                 </div>
-                                <input type="text" name="nome" class="form-control" placeholder="username">
+                                <input type="text" name="username" class="form-control" placeholder="username">
                                 
                             </div>
                             <div class="input-group form-group">
@@ -40,14 +39,20 @@
                                 </div>
                                 <input type="password" name="password" class="form-control" placeholder="password">
                             </div>
-                            <div class="form-group">
-                                <input type="submit" value="Login" class="btn float-right login_btn">
-                            </div>
-                        </form>
+                          
+                       
                     </div>
-                </div>
-            </div>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <input type="submit"  class="btn float-right login_btn">
+      </div>
+    </div>
+     </form>
+  </div>
+</div>
+
+  
 
 </body>
 </html>
