punto di svolta

--- a/src/main/resources/templates/default/home.html
+++ b/src/main/resources/templates/default/home.html
@@ -1,11 +1,10 @@
     <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head th:replace="fragments/default.html :: headerfiles(title='Login Utente')"> 
-<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-
 </head>
+<body>
 <header th:replace="fragments/default.html :: header"></header>
-<div th:replace="accountOption :: modal">modal</div>
+
 <footer th:replace="fragments/default.html :: footer"></footer>
     </body>
 </html>
